fix up headers in part 2

--- a/lessons/02_bag_of_words.ipynb
+++ b/lessons/02_bag_of_words.ipynb
@@ -5,14 +5,8 @@
    "id": "2ffcdc86-76ef-453f-a162-7741c9c23b8c",
    "metadata": {},
    "source": [
-    "# Python Text Analysis: Fundamentals, Part 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e462b819-abfc-4a0b-93a3-3e1aa2be9d24",
-   "metadata": {},
-   "source": [
+    "# Python Text Analysis: Fundamentals, Part 2\n",
+    "\n",
     "In the previous lesson, we learned how to use several packages to preprocess text. However, we never moved beyond the *text representation* - we only manipulated the representation itself. If we want to perform computational analysis on the text, we will need to devise approaches to convert the text into a *numeric representation*.\n",
     "\n",
     "In this lesson, we'll explore one of the simplest ways to generate a numeric representation from text: the **bag-of-words**. With this numeric representation, we'll build a simple classifier and explore what the classifier tells us. At the heart of the bag-of-words approach lies the hypothesis that the presence and frequency of specific tokens is informative about the semantics and sentiment behind the text.\n",
@@ -25,14 +19,8 @@
    "id": "0ef4dbc3-52dd-4dc9-8d0d-21ad31808d09",
    "metadata": {},
    "source": [
-    "# The Airline Tweets Dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bcd83f11-7239-425a-b505-3f3f3425079d",
-   "metadata": {},
-   "source": [
+    "## The Airline Tweets Dataset\n",
+    "\n",
     "We'll work with a dataset consisting of tweets about US airlines. Each sample is a different tweet, which was posted at a specific airline. These tweets may express positive, neutral, or negative \"sentiment\". Our eventual goal will be to predict the sentiment of the tweet given its text.\n",
     "\n",
     "The dataset was collected by Crowdflower, which they then made public through Kaggle. We've already downloaded it and placed it in the `data` directory. Note that this dataset, on the whole, is structured nicely and has already undergone some cleaning. However, this is not the norm in real-life data science! We've chosen this dataset so that we can concentrate on learning and understanding the core concepts."
@@ -45,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install nltk"
+    "%pip install nltk"
    ]
   },
   {
@@ -96,14 +84,8 @@
    "id": "880e8a36-bd58-4c24-8593-03a0ea70deed",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83108a6d-bfd9-4534-b628-6e77c8262821",
-   "metadata": {},
-   "source": [
+    "## Exploratory Data Analysis\n",
+    "\n",
     "Before we ever do any preprocessing or modeling, we always should do some exploratory data analysis to get a feel for the dataset.\n",
     "\n",
     "First, let's take a look at the first few rows and all the columns:"
@@ -171,7 +153,9 @@
    "id": "c82c497c-4138-47eb-b959-235b552e7a47",
    "metadata": {},
    "source": [
-    "## Challenge 1: Getting to Know the Data\n",
+    "---\n",
+    "\n",
+    "### Challenge 1: Getting to Know the Data\n",
     "\n",
     "Use `pandas` to find out the following about the airline tweets:\n",
     "\n",
@@ -184,7 +168,9 @@
     "\n",
     "* How much time separates the earliest and latest tweets?\n",
     "* What gets more retweets: positive, negative, or neutral tweets?\n",
-    "* Identify the airline whose tweets have the highest proportion of negative sentiment."
+    "* Identify the airline whose tweets have the highest proportion of negative sentiment.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -192,14 +178,8 @@
    "id": "9e513930-2dc7-489c-bc5a-22eb09add5bf",
    "metadata": {},
    "source": [
-    "# Preprocessing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "67bbe641-7d4a-4ab1-831b-a1f6ca15f3a5",
-   "metadata": {},
-   "source": [
+    "## Preprocessing\n",
+    "\n",
     "We spent much of the last workshop learning how to preprocess the data. Let's apply what we learned to this dataset. Looking at some of the tweets above, we can see that while they are in pretty good shape, we can do some additional processing on them.\n",
     "\n",
     "In our pipeline, we'll omit the tokenization process, since we will perform it in a later step. Instead, we'll add a couple new preprocessing steps now that we are working with social media data. Specifically, we'll replace all hashtags with a \"HASHTAG\" token, and we'll replace all users (denoted by the \"@\" symbol) with a \"USER\" token. "
@@ -210,7 +190,9 @@
    "id": "92a83ece-f3b2-4200-9d22-0788fbc07fa4",
    "metadata": {},
    "source": [
-    "## Challenge 2: Creating a Preprocessing Pipeline for Social Media Data\n",
+    "---\n",
+    "\n",
+    "### Challenge 2: Creating a Preprocessing Pipeline for Social Media Data\n",
     "\n",
     "Write a function called `preprocess()` that performs the following on a text input:\n",
     "\n",
@@ -223,7 +205,9 @@
     "\n",
     "We have provided regex patterns for each of the replacement steps in the following cells.\n",
     "\n",
-    "Run your `preprocess()` function on `example_tweet` (two cells below), and when you think you have it working, apply it to the entire `text` column in the tweets DataFrame."
+    "Run your `preprocess()` function on `example_tweet` (two cells below), and when you think you have it working, apply it to the entire `text` column in the tweets DataFrame.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -234,7 +218,7 @@
    "outputs": [],
    "source": [
     "# Useful regex patterns\n",
-    "url_pattern = r'https?:\\/\\/.*[\\r\\n]*'\n",
+    "url_pattern = r'(http|ftp|https):\\/\\/([\\w_-]+(?:(?:\\.[\\w_-]+)+))([\\w.,@?^=%&:\\/~+#-]*[\\w@?^=%&\\/~+#-])'\n",
     "digit_pattern = '\\d+'\n",
     "hashtag_pattern = r'(?:^|\\s)[＃#]{1}(\\w+)'\n",
     "user_pattern = r'@(\\w+)'"
@@ -299,24 +283,12 @@
    "id": "53282330-54da-4e1c-bfe5-e77cb8fa3add",
    "metadata": {},
    "source": [
-    "# The Bag-of-Words Representation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e55969dd-18a3-4ca3-a0f7-ad8f628bd5c5",
-   "metadata": {},
-   "source": [
+    "## The Bag-of-Words Representation\n",
+    "\n",
     "The fundamental principle behind bag-of-words is to encode the corpus in terms of word frequencies. Consider the case of sentiment: we know sentiment is conveyed more strongly by specific words. For example, if a tweet contains the word \"happy\", it likely conveys positive sentiment (but not always - someone might say they're \"not happy\" - the opposite sentiment!). Furthermore, when those words come up more often, they'll probably more strongly convey the sentiment.\n",
     "\n",
-    "In a bag-of-words, we taken some text, tokenize it, and then tabulate the frequencies of each token. The numerical representation of the text, then, is a vector indicating the frequencies of each token for that text."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec7287d9-7307-4b5e-b0b3-ae4c7334b705",
-   "metadata": {},
-   "source": [
+    "In a bag-of-words, we taken some text, tokenize it, and then tabulate the frequencies of each token. The numerical representation of the text, then, is a vector indicating the frequencies of each token for that text.\n",
+    "\n",
     "For example, if we're considering a movie review as follows: \n",
     "\n",
     "![bow](../images/bow.png)\n",
@@ -329,14 +301,8 @@
    "id": "b9d9bdbd-406d-469b-a8f6-41d1b3687c37",
    "metadata": {},
    "source": [
-    "## Document Term Matrix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "33692097-d13e-4797-bb07-510c565b6cdc",
-   "metadata": {},
-   "source": [
+    "### Document Term Matrix\n",
+    "\n",
     "In most text corpora, we will have many samples or *documents*. For example, in the airline tweets dataset, we have many tweets. Each tweet stands on its own as a unique sample: they can each be thought of as a unique document in the entire *corpus*. Since they are all related to each other, many tokens might be shared across tweets. So, when creating the bag-of-words model, we can tokenize across all documents, forming a *vocabulary*. Then, we can represent a single document by which of the tokens in the vocabulary are represented, and their frequency within the document.\n",
     "\n",
     "If the vocabulary has $V$ tokens, then each document will be encoded in a $V$-dimensional vector. If there are $D$ documents, the entire dataset can be represented in a $D \\times V$ matrix, where each row corresponds to the document, and each column corresponds to the token (or \"term\"). This $D \\times V$ matrix is a **document term matrix** (DTM).\n",
@@ -501,11 +467,25 @@
    "id": "1ec2e239-4bb8-4452-a358-cc10c46b8786",
    "metadata": {},
    "source": [
-    "## Challenge 3: DTM Data Analysis\n",
+    "---\n",
+    "\n",
+    "### Challenge 3: DTM Data Analysis\n",
     "\n",
     "* Print out the most infrequent words rather than the most frequent words. If you're not sure how, check the [documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.sort_values.html)!\n",
     "* Print the average number of times each word is used in a tweet.\n",
-    "* Which non-hashtag, non-digit token appears the most in any given tweet? How many times does it appear? What is the original tweet?"
+    "* Which non-hashtag, non-digit token appears the most in any given tweet? How many times does it appear? What is the original tweet?\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ebcc05f-22b2-4821-8c6e-ae3d674e948f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -513,7 +493,7 @@
    "id": "3dba8e37-4880-4565-b6fc-7e7c96958f0f",
    "metadata": {},
    "source": [
-    "## Customizing the `CountVectorizer`\n",
+    "### Customizing the `CountVectorizer`\n",
     "\n",
     "Recall the documentation on the `CountVectorizer` object: there are many options here on how you can customize the procedure of generating the vocabulary. Let's highlight some of these values:\n",
     "\n",
@@ -561,11 +541,15 @@
    "id": "3e8b5145-d505-4e36-9a39-a40d25d8ec6f",
    "metadata": {},
    "source": [
-    "## Challenge 4: Customizing the Vectorizer with `nltk` inputs\n",
+    "---\n",
+    "\n",
+    "### Challenge 4: Customizing the Vectorizer with `nltk` inputs\n",
     "\n",
     "If you look at the `CountVectorizer` documentation, you'll see that it can actually accept a custom `tokenizer` and `stop_words` list. \n",
     "\n",
-    "Using what you learned in the previous workshop, create a `CountVectorizer` that utilizes the `nltk` word tokenizer and stop word list. How does the resulting DTM look different?"
+    "Using what you learned in the previous workshop, create a `CountVectorizer` that utilizes the `nltk` word tokenizer and stop word list. How does the resulting DTM look different?\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -581,11 +565,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf4ff597-caa9-4d0b-92b7-57b59156b8fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "38363398-fdf5-456b-ae3d-cae9d5294140",
    "metadata": {},
    "source": [
-    "## Term Frequency-Inverse Document Frequency Scores (TF-IDF)\n",
+    "### Term Frequency-Inverse Document Frequency Scores (TF-IDF)\n",
     "\n",
     "So far, we're relying on word frequencies to give us information about a document. This assumes if a word appears more often in a document, it's more informative. However, this may not always be the case. For example, we already remove stop-words because they are not informative, despite the fact that they appear many times in a document. In the airline tweets, the word `flight` appears many times across the corpus, but is also not that informative, because it appears in many documents. Since we're looking at airline tweets, we shouldn't be surprised to see the word `flight`!\n",
     "\n",
@@ -619,14 +613,8 @@
     "\\text{idf}(t) = 1 + \\log\\left(\\frac{1 + D}{1 + D_t}\\right)\n",
     "$$\n",
     "\n",
-    "to prevent any issues with zero occurrences."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "769fe459-2aff-4304-af46-5c97779915db",
-   "metadata": {},
-   "source": [
+    "to prevent any issues with zero occurrences.\n",
+    "\n",
     "We can also create a tf-idf DTM using `sklearn`. We'll use a `TfidfVectorizer` this time:"
    ]
   },
@@ -692,7 +680,7 @@
    "id": "da410cb3-a452-441b-a94d-8f751d59d7a6",
    "metadata": {},
    "source": [
-    "# Supervised Learning: Sentiment Classification\n",
+    "## Supervised Learning: Sentiment Classification\n",
     "\n",
     "Now that we have a numerical representation of the text, we'd like to *do* something with it. A common task is supervised learning: using the numerical representation to predict some kind of label about the text. Text classification can consist of many types of analysis, such as:\n",
     "\n",
@@ -724,14 +712,8 @@
    "id": "e1121954-e13c-4bdc-9323-6834060d7197",
    "metadata": {},
    "source": [
-    "## Predicting Sentiment with Logistic Regression"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "df3ab3a9-ce76-4daf-84c0-5f65bd32904b",
-   "metadata": {},
-   "source": [
+    "### Predicting Sentiment with Logistic Regression\n",
+    "\n",
     "We're going to use a logistic regression model to predict the labels. If you're not familiar with this model, or the basics of machine learning, we recommend taking the Python Machine Learning workshop offered at the D-Lab. For now, we'll review some basics.\n",
     "\n",
     "The DTM is a $D\\times T$ matrix, where $D$ is the number of documents, and $T$ is the number of terms. We can think of the $T$ terms as the \"features\": these values are what we'll use to predict the sentiment. The $D$ documents represent samples: we'll use the patterns across these samples to learn a relationship between the feature and the outcome.\n",
@@ -801,7 +783,7 @@
     "    # Lowercase\n",
     "    text = text.lower()\n",
     "    # Replace URLs\n",
-    "    url_pattern = r'https?:\\/\\/.*[\\r\\n]*'\n",
+    "    url_pattern = r'(http|ftp|https):\\/\\/([\\w_-]+(?:(?:\\.[\\w_-]+)+))([\\w.,@?^=%&:\\/~+#-]*[\\w@?^=%&\\/~+#-])'\n",
     "    url_repl = ' URL '\n",
     "    text = re.sub(url_pattern, url_repl, text)\n",
     "    # Replace digits\n",
@@ -973,7 +955,7 @@
    "id": "c11b5232-b9f5-471b-8269-ee529a6b1072",
    "metadata": {},
    "source": [
-    "## Validating Model Performance on New Tweets\n",
+    "### Validating Model Performance on New Tweets\n",
     "\n",
     "Now that we have a trained model, there's nothing stopping us from using it on new data! The `model` object comes equipped with a `predict` function that we can use to evaluate on new text samples:"
    ]
@@ -1031,14 +1013,8 @@
    "id": "310dac39-4753-4ae8-8dfa-e65e5824cccb",
    "metadata": {},
    "source": [
-    "## Interpreting the Model Coefficients"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c5a48bd9-68d0-45fe-9491-6ffcec79eae9",
-   "metadata": {},
-   "source": [
+    "### Interpreting the Model Coefficients\n",
+    "\n",
     "The nice thing about logistic regression is that it is **interpretable**. Take a look at the logit again:\n",
     "\n",
     "$$\n",
@@ -1097,9 +1073,13 @@
    "id": "7803473d-9544-4e6d-a840-241cd9f810f6",
    "metadata": {},
    "source": [
-    "## Challenge 5\n",
+    "---\n",
     "\n",
-    "Try developing a **multinomial logistic regression** model, to predict positive, negative, and neutral labels. We've provided you a fitter function below, but it's up to you to create new labels, train-test splits, and perform the fitting and evaluation!"
+    "### Challenge 5\n",
+    "\n",
+    "Try developing a **multinomial logistic regression** model, to predict positive, negative, and neutral labels. We've provided you a fitter function below, but it's up to you to create new labels, train-test splits, and perform the fitting and evaluation!\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -1122,13 +1102,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "697c9e29-0fbd-4bb2-982c-9b195c30f89a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f5efe867-1e98-4e82-8b55-6251061321e5",
    "metadata": {},
    "source": [
-    "## Challenge 6\n",
+    "---\n",
     "\n",
-    "Create a new fitter function that uses a `RandomForestClassifier`. How is the performance? Check the [documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html) for more details."
+    "### Challenge 6\n",
+    "\n",
+    "Create a new fitter function that uses a `RandomForestClassifier`. How is the performance? Check the [documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html) for more details.\n",
+    "\n",
+    "---"
    ]
   },
   {
