--- a/solutions/02_bag_of_words_solutions.ipynb
+++ b/solutions/02_bag_of_words_solutions.ipynb
@@ -42,7 +42,9 @@
    "id": "984af902-74f5-4244-a511-08d33bdf6776",
    "metadata": {},
    "source": [
-    "## Challenge 1: Getting to Know the Data\n",
+    "---\n",
+    "\n",
+    "### Challenge 1: Getting to Know the Data\n",
     "\n",
     "Use `pandas` to find out the following about the airline tweets:\n",
     "\n",
@@ -55,7 +57,9 @@
     "\n",
     "* How much time separates the earliest and latest tweets?\n",
     "* What gets more retweets: positive, negative, or neutral tweets?\n",
-    "* Identify the airline whose tweets have the highest proportion of negative sentiment."
+    "* Identify the airline whose tweets have the highest proportion of negative sentiment.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -142,7 +146,9 @@
    "id": "df76ff67-d285-4148-a642-f8bd4ce0ca4f",
    "metadata": {},
    "source": [
-    "## Challenge 2: Creating a Preprocessing Pipeline for Social Media Data\n",
+    "---\n",
+    "\n",
+    "### Challenge 2: Creating a Preprocessing Pipeline for Social Media Data\n",
     "\n",
     "Write a function called `preprocess()` that performs the following on a text input:\n",
     "\n",
@@ -155,7 +161,9 @@
     "\n",
     "We have provided regex patterns for each of the replacement steps in the following cells.\n",
     "\n",
-    "Run your `preprocess()` function on `example_tweet` (two cells below), and when you think you have it working, apply it to the entire `text` column in the tweets DataFrame."
+    "Run your `preprocess()` function on `example_tweet` (two cells below), and when you think you have it working, apply it to the entire `text` column in the tweets DataFrame.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -181,7 +189,7 @@
     "    # Lowercase\n",
     "    text = text.lower()\n",
     "    # Replace URLs\n",
-    "    url_pattern = r'https?:\\/\\/.*[\\r\\n]*'\n",
+    "    url_pattern = r'(http|ftp|https):\\/\\/([\\w_-]+(?:(?:\\.[\\w_-]+)+))([\\w.,@?^=%&:\\/~+#-]*[\\w@?^=%&\\/~+#-])'\n",
     "    url_repl = ' URL '\n",
     "    text = re.sub(url_pattern, url_repl, text)\n",
     "    # Replace digits\n",
@@ -231,11 +239,15 @@
    "id": "8e25a7b6-b726-46e7-96c1-a022eca35876",
    "metadata": {},
    "source": [
-    "## Challenge 3: DTM Data Analysis\n",
+    "---\n",
+    "\n",
+    "### Challenge 3: DTM Data Analysis\n",
     "\n",
     "* Print out the most infrequent words rather than the most frequent words. If you're not sure how, check the [documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.sort_values.html)!\n",
     "* Print the average number of times each word is used in a tweet.\n",
-    "* Which non-hashtag, non-digit token appears the most in any given tweet? How many times does it appear? What is the original tweet?"
+    "* Which non-hashtag, non-digit token appears the most in any given tweet? How many times does it appear? What is the original tweet?\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -322,11 +334,15 @@
    "id": "a3840105-d53b-40f4-9a7e-90134b6b86d4",
    "metadata": {},
    "source": [
-    "## Challenge 4: Customizing the Vectorizer with `nltk` inputs\n",
+    "---\n",
+    "\n",
+    "### Challenge 4: Customizing the Vectorizer with `nltk` inputs\n",
     "\n",
     "If you look at the `CountVectorizer` documentation, you'll see that it can actually accept a custom `tokenizer` and `stop_words` list. \n",
     "\n",
-    "Using what you learned in the previous workshop, create a `CountVectorizer` that utilizes the `nltk` word tokenizer and stop word list. How does the resulting DTM look different?"
+    "Using what you learned in the previous workshop, create a `CountVectorizer` that utilizes the `nltk` word tokenizer and stop word list. How does the resulting DTM look different?\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -361,9 +377,13 @@
    "id": "53695e2f-c113-4fb0-9ef0-a99523e5c132",
    "metadata": {},
    "source": [
-    "## Challenge 5\n",
+    "---\n",
     "\n",
-    "Try developing a **multinomial logistic regression** model, to predict positive, negative, and neutral labels. We've provided you a fitter function below, but it's up to you to create new labels, train-test splits, and perform the fitting and evaluation!"
+    "### Challenge 5\n",
+    "\n",
+    "Try developing a **multinomial logistic regression** model, to predict positive, negative, and neutral labels. We've provided you a fitter function below, but it's up to you to create new labels, train-test splits, and perform the fitting and evaluation!\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -438,9 +458,13 @@
    "id": "d3b19e4f-fba6-46e3-8280-461582ca8624",
    "metadata": {},
    "source": [
-    "## Challenge 6\n",
+    "---\n",
     "\n",
-    "Create a new fitter function that uses a `RandomForestClassifier`. How is the performance? Check the [documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html) for more details."
+    "### Challenge 6\n",
+    "\n",
+    "Create a new fitter function that uses a `RandomForestClassifier`. How is the performance? Check the [documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html) for more details.\n",
+    "\n",
+    "---"
    ]
   },
   {
